--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 }
 </script>
 </head>
-  <body class="bg-background-light dark:bg-slate-950 font-display text-slate-900 dark:text-slate-100 antialiased h-screen overflow-hidden transition-colors duration-200">
+  <body class="bg-background-light dark:bg-slate-950 font-display text-slate-900 dark:text-slate-100 antialiased transition-colors duration-200">
     <div id="root"></div>
   </body>
 </html>
